stamp-list-section control-bars laid out

--- a/_config.scss
+++ b/_config.scss
@@ -1,3 +1,22 @@
+
+
+
+
+/*****************************************************************************/
+/********************************* < Variables *******************************/
+$color-primary: #896a54;
+$color-secondary: #573d2b;
+$color-dark: #000000;
+$color-light: #ffffff;
+$overlay-dark: rgba(0, 0, 0, 0.5);
+/********************************* Variables /> ******************************/
+/*****************************************************************************/
+
+
+
+
+/*****************************************************************************/
+/********************************* < Generic *********************************/
 * {
     padding: 0;
     margin: 0;
@@ -10,8 +29,6 @@ body {
     line-height: 1.5rem;
 }
 
-$color-primary: #896a54;
-$color-secondary: #573d2b;
-$color-dark: #000000;
-$color-light: #ffffff;
-$overlay-dark: rgba(0, 0, 0, 0.5);
+.removed { display: none; }
+/********************************* Generic /> ********************************/
+/*****************************************************************************/
