--- a/style.css
+++ b/style.css
@@ -1,131 +1,2 @@
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  font-family: Roboto;
-  font-size: 16px;
-  line-height: 1.5rem;
-}
-
-#testframe {
-  width: 100%;
-  min-height: 40vmax;
-}
-
-.iframe-container {
-  /* Position */
-  position: relative;
-  /* Box Model */
-  margin: 24px;
-}
-
-.iframe-overlay {
-  /* Display */
-  pointer-events: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  /* Position */
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* Box Model */
-  min-width: 100%;
-  min-height: 100%;
-  /* Other */
-  pointer-events: none;
-}
-
-svg {
-  height: 2rem;
-  fill: white;
-}
-
-.timers-container {
-  /* Display */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  /* Box Model */
-  width: 100%;
-  height: 2rem;
-}
-
-.timers-container * {
-  pointer-events: all;
-}
-
-.timer-container {
-  /* Display */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  /* Box Model */
-  min-height: 2rem;
-  /* Colors and Typography */
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.timer-container * {
-  margin-left: 0.5rem;
-}
-
-.timer-container .timer-time {
-  /* Display */
-  display: block;
-  /* Box Model */
-  margin-right: 0.5rem;
-  /* Color and Typography */
-  color: white;
-}
-
-.commands-container {
-  /* Display */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  /* Box Model */
-  margin-top: 2rem;
-  width: 100%;
-  height: 2rem;
-  /* Colors and Typography */
-  /* background-color: $overlay-dark; */
-  /* Other */
-}
-
-.commands-container * {
-  pointer-events: all;
-}
-
-.commands-container svg {
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 2.5rem;
-  padding: 0.5rem;
-}
+*{padding:0;margin:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{font-family:Roboto;font-size:16px;line-height:1.5rem}.removed{display:none}svg{width:2rem;height:2rem;fill:#fff}.iframe-container{position:relative;height:40vw;margin:1.5rem}#testframe{width:100%;min-height:40vw}.iframe-overlay{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:absolute;top:0;left:0;width:100%;min-height:40vw;pointer-events:none}.timers-container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;width:100%;height:2rem}.timer-container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;min-height:2rem;background-color:rgba(0,0,0,0.5);pointer-events:all}.timer-container *{margin-left:0.5rem}.timer-time{display:block;margin-right:0.5rem;color:#fff}.commands-container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;width:100%;height:2rem;margin-top:2rem}.commands-container svg{width:2.5rem;height:2.5rem;padding:0.5rem;background-color:rgba(0,0,0,0.5);pointer-events:all}.stamp-list-section{margin:1.5rem}.control-bar-container{position:relative;height:2rem;background-color:#573d2b;color:#fff;overflow:hidden}.control-bar{position:absolute;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;height:2rem}.control-bar *{margin-left:0.5rem}.secondary-control-bar{top:2rem}.hoisted-bar{-webkit-transform:translateY(-2rem);transform:translateY(-2rem)}.control-icons{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.control-icons svg{height:1.5rem}.secondary-control-bar .control-label::after{content:':'}
 /*# sourceMappingURL=style.css.map */
