--- a/style.scss
+++ b/style.scss
@@ -4,24 +4,45 @@
 
 
 
-#testframe {
-    width: 100%;
-    min-height: 40vmax;
+
+/*****************************************************************************/
+/********************************* < General *********************************/
+svg {
+    width: 2rem; // Box Model
+    height: 2rem;    
+    
+    fill: $color-light; // Colors and Typography
 }
 
+/********************************* General /> ********************************/
+/*****************************************************************************/
+
+
+
+
+/*****************************************************************************/
+/********************************** < Video **********************************/
 .iframe-container {
 
     /* Position */
     position: relative;
 
     /* Box Model */
-    margin: 24px;
+    height: 40vw; // linked to #testframe height
+    margin: 1.5rem;
 }
+
+
+#testframe {
+    width: 100%;
+    min-height: 40vw;
+    /* min-height: 80vw; */ // For portrait view, deprioritizing for dev
+}
+
 
 .iframe-overlay {
 
     /* Display */
-    pointer-events: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,17 +54,13 @@
     left: 0;
 
     /* Box Model */
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    min-height: 40vw; // Should be linked to #testframe dimensions
 
     /* Other */
     pointer-events: none;
 }
 
-svg {
-    height: 2rem;
-    fill: white;
-}
 
 .timers-container {
 
@@ -54,11 +71,8 @@ svg {
     /* Box Model */
     width: 100%;
     height: 2rem;
-
-    * {
-        pointer-events: all;
-    }
 }
+
 
 .timer-container {
 
@@ -74,16 +88,24 @@ svg {
     /* Colors and Typography */
     background-color: $overlay-dark;
 
-    .timer-time {
-        /* Display */
-        display: block;
-        /* Box Model */
-        margin-right: 0.5rem;
-        /* Color and Typography */
-        color: white;
-    }
+    /* Other */
+    pointer-events: all;
 
 }
+
+
+.timer-time {
+
+    /* Display */
+    display: block;
+    
+    /* Box Model */
+    margin-right: 0.5rem;
+    
+    /* Color and Typography */
+    color: $color-light;
+}
+
 
 .commands-container {
 
@@ -92,21 +114,80 @@ svg {
     justify-content: space-between;
     
     /* Box Model */
-    margin-top: 2rem;
     width: 100%;
     height: 2rem;
+    margin-top: 2rem;
 
     /* Colors and Typography */
     /* background-color: $overlay-dark; */
 
     /* Other */
-    * {
+
+    svg {
+
+        /* Box Model */
+        width: 2.5rem;
+        height: 2.5rem;
+        padding: 0.5rem;
+
+        /* Colors and Typography */
+        background-color: $overlay-dark;
+
+        /* Other */
         pointer-events: all;
     }
 
-    svg {
-        background-color: $overlay-dark;
-        height: 2.5rem;
-        padding: 0.5rem;
-    }
 }
+/********************************* Video /> *********************************/
+/****************************************************************************/
+
+
+
+
+/****************************************************************************/
+/******************************* < Stamp-List *******************************/
+.stamp-list-section {
+    margin: 1.5rem; // Box Model
+}
+
+.control-bar-container {
+    position: relative; // Position
+
+    height: 2rem; // Box Model
+
+    background-color: $color-secondary; // Colors & Typography
+    color: $color-light;
+
+    overflow: hidden; // Other
+}
+
+.control-bar {
+    position: absolute; //Position
+    
+    display: flex; // Display
+    align-items: center;
+
+    height: 2rem; // Box Model
+    * { margin-left: 0.5rem;}    
+}
+
+.secondary-control-bar {    
+    top: 2rem; // Position
+}
+
+.hoisted-bar {
+    transform: translateY(-2rem);
+}
+
+.control-icons {
+    display: flex; // Display
+    align-items: center;
+
+    svg { height: 1.5rem; } // Box Model
+}
+
+.secondary-control-bar .control-label::after {
+    content: ':';
+}
+/******************************* Stamp-List /> ******************************/
+/****************************************************************************/
