--- a/_config.scss
+++ b/_config.scss
@@ -30,5 +30,7 @@ body {
 }
 
 .removed { display: none; }
+
+.transparent { opacity: 0.05; }
 /********************************* Generic /> ********************************/
 /*****************************************************************************/
