--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,14 @@ svg {
     cursor: pointer; // Other
 }
 
+.time-input { 
+    width: 5rem; // Box Model
+    
+    text-align: center; // Other
+}
+
+.title-input { text-indent: 0.5rem; }
+
 /********************************* General /> ********************************/
 /*****************************************************************************/
 
@@ -32,6 +40,9 @@ svg {
     /* Box Model */
     height: 60vw; // linked to #testframe height
     margin: 1.5rem;
+
+    /* Other */
+    overflow: hidden;
 }
 
 
@@ -61,6 +72,7 @@ svg {
 
     /* Other */
     pointer-events: none;
+    transition: all 0.1s ease-in-out 0s;
 }
 
 
@@ -145,6 +157,38 @@ svg {
     }
 
 }
+
+
+.stamping-menu {
+
+    display: flex; // Display
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    position: absolute; // Position
+    top: 0;
+    left: 100%;
+    
+    width: 100%; // Box Model
+    min-height: 60vw; // Should be linked to #testframe dimensions
+
+    background-color: $overlay-dark; // Colors & Typography
+
+    transition: all 0.1s ease-in-out 0s; // Other
+}
+
+
+.push-left {
+    transform: translateX(-100%);
+}
+
+
+.visibility-icon {
+    position: absolute; // Position
+    right: 0;
+    top: calc(50% - 1rem);
+}
 /********************************* Video /> *********************************/
 /****************************************************************************/
 
@@ -212,15 +256,8 @@ svg {
     
 }
 
-.stamp-time {
-    width: 5rem; // Box Model
+//.stamp-time { width: 5rem; }
+.stamp-title { width: 100%; }
 
-    text-align: center; // Other
-}
-
-.stamp-title {
-    width: 100%;
-    text-indent: 0.5rem;
-}
 /******************************* Stamp-List /> ******************************/
 /****************************************************************************/
