--- a/_config.scss
+++ b/_config.scss
@@ -38,5 +38,8 @@ body {
 
 
 .push-left { transform: translateX(-100%); }
+
+
+.hoisted-bar { transform: translateY(-100%); }
 /********************************* Generic /> ********************************/
 /*****************************************************************************/
