basic stamp workflow implemented

--- a/_config.scss
+++ b/_config.scss
@@ -6,6 +6,7 @@
 /********************************* < Variables *******************************/
 $color-primary: #896a54;
 $color-secondary: #573d2b;
+$color-tertiary: #777;
 $color-dark: #000000;
 $color-light: #ffffff;
 $overlay-dark: rgba(0, 0, 0, 0.5);
